--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#21618C"
     tools:context=".MainLogin">
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/logeogmail"
-        android:layout_width="153dp"
-        android:layout_height="48dp"
+        android:layout_width="231dp"
+        android:layout_height="67dp"
         android:layout_marginBottom="108dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -23,8 +24,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="159dp"
-        android:layout_height="206dp"
+        android:layout_width="266dp"
+        android:layout_height="255dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
